--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
-
 @import url('https://fonts.googleapis.com/css?family=Montserrat:300,400,500,700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Rajdhani:wght@300&display=swap');
 
 
 body {
@@ -24,8 +24,8 @@ body::before {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5); /* Cor preta com opacidade de 50% */
-  z-index: -1; /* Garante que o pseudo-elemento esteja atrás da imagem de fundo */
+  background-color: rgba(0, 0, 0, 0.5); 
+  z-index: -1; 
 }
 
 
@@ -40,10 +40,11 @@ body::before {
 }
 
 h1 {
-  color: #f3eeee;
+  color: #f7da8bd2;
   margin-bottom: 20px;
-  font-family: 'Courier New', Courier, monospace;
+  font-family: 'Rajdhani', sans-serif;
   font-size: 35px;
+  letter-spacing: 1px;
 }
 
 label {
@@ -59,10 +60,12 @@ select {
   margin-bottom: 25px;
   border: 3px solid rgba(12, 52, 112, 0.356);
   border-radius: 6px;
-  font-size: 16px;
+  font-size: 13px;
   color: #fff;
   background-color: rgba(10, 14, 20, 0.329);
   box-shadow: 0 5px 15px rgba(12, 52, 112, 0.568);
+  margin-top: 15px;
+  
 }
 
 
@@ -123,21 +126,23 @@ button.language-button:hover {
   background-color: #1c1d1c;
 }
 
-@media only screen and (max-width: 800px) {
+@media only screen and (max-width: 768px) {
   .container {
     padding: 20px;
     width: 300px;
     border-radius: 50px;
   }
   h1{
-    font-size: 14px;
+    font-size: 16px;
+    
   }
 
   select {
     margin-bottom: 10px;
     font-size: 8px;
-    height: 38px;
+    height: 40px;
     width: 300px;
+    margin-top: 8px;
   }
 
   button.language-button {
